using local image

--- a/image-crop/index.html
+++ b/image-crop/index.html
@@ -32,8 +32,8 @@
                   <li><a href="#" class="button crop">Crop region</a></li>
                 </ul>
                 <section class="box">
-                  <a href="#" class="image featured"><img id="crop" src="http://c1.staticflickr.com/9/8681/16772114992_815fb3721d_n.jpg" alt="" /></a>
-                  <!--<a href="#" class="image featured"><img id="crop" src="images/ios8.png" alt="" /></a>-->
+                  <!--<a href="#" class="image featured"><img id="crop" src="http://c1.staticflickr.com/9/8681/16772114992_815fb3721d_n.jpg" alt="" /></a>-->
+                  <a href="#" class="image featured"><img id="crop" src="images/ios8.png" alt="" /></a>
                 </section>
               </div>
               <div class='row'>
